--- a/tetris.html
+++ b/tetris.html
@@ -68,6 +68,14 @@
                 0 10px 22px rgba(0,0,0,0.3),
                 0 0 0 1px rgba(255,255,255,0.03) inset;
         }
+        #next-piece {
+            background: #000;
+            border-radius: 4px;
+            width: 100%;
+            height: auto;
+            aspect-ratio: 1;
+            image-rendering: pixelated;
+        }
         .title {
             font-weight: bold;
             color: var(--accent);
@@ -142,6 +150,10 @@
                 <div>Level: <span id="level">0</span></div>
             </div>
             <div class="info">
+                <div class="title">Next</div>
+                <canvas id="next-piece" width="96" height="96"></canvas>
+            </div>
+            <div class="info">
                 <div class="title">Controls</div>
                 <div>A: Move left</div>
                 <div>D: Move right</div>
@@ -151,12 +163,6 @@
                 <div>M: Restart</div>
                 <div>P: Pause</div>
                 <div class="muted">Esc: Back</div>
-            </div>
-
-            <!-- Next block preview -->
-            <div class="info">
-                <div class="title">Next</div>
-                <canvas id="preview" width="72" height="72" style="background:#000;border-radius:6px;box-shadow:0 4px 12px rgba(255,47,109,0.18);"></canvas>
             </div>
 
             <!-- Mobile controls -->
@@ -213,9 +219,12 @@
 
   const canvas = document.getElementById('tetris');
   const ctx = canvas.getContext('2d');
+  const nextCanvas = document.getElementById('next-piece');
+  const nextCtx = nextCanvas.getContext('2d');
 
   const COLS = 10, ROWS = 20, SIZE = 24;
   ctx.scale(SIZE/24, SIZE/24); // keep logical pixels at 24px blocks
+  nextCtx.scale(SIZE/24, SIZE/24);
 
   // ----- Visual helpers -----
   function hexToRgb(hex) {
@@ -360,6 +369,7 @@
       level: 0,
   };
 
+  let nextPieceMatrix = null;
   let dropCounter = 0;
   let lastTime = 0;
   let paused = false;
@@ -369,6 +379,10 @@
   let flashElapsed = 0;
   const FLASH_DURATION = 200;   // total flash time in ms
   const FLASH_INTERVAL = 80;    // toggle interval in ms
+
+  // Trail effect
+  const trail = [];
+  const TRAIL_MAX_AGE = 200; // ms
 
   // Visual extras
   let pieceSpawnT = 0;
@@ -401,6 +415,31 @@
               }
           }
       }
+  }
+  function emitLandingParticles(player) {
+      const matrix = player.matrix;
+      const offset = player.pos;
+      matrix.forEach((row, y) => {
+          row.forEach((v, x) => {
+              if (v === 0) return;
+              const c = colors[v];
+              for (let k = 0; k < 2; k++) {
+                  const cx = (offset.x + x) * 24 + 12;
+                  const cy = (offset.y + y) * 24 + 12;
+                  const ang = Math.random() * Math.PI * 2;
+                  const spd = 0.5 + Math.random() * 1.5;
+                  particles.push({
+                      x: cx, y: cy,
+                      vx: Math.cos(ang) * spd,
+                      vy: Math.sin(ang) * spd - (0.2 + Math.random()*0.4),
+                      life: 300 + Math.random()*150,
+                      age: 0,
+                      color: c,
+                      size: 1.5 + Math.random()*1.5,
+                  });
+              }
+          });
+      });
   }
   function updateParticles(dt) {
       for (let i = particles.length - 1; i >= 0; i--) {
@@ -466,125 +505,39 @@
       else matrix.reverse();
   }
 
-  // --- Next block preview ---
-  const previewCanvas = document.getElementById('preview');
-  const previewCtx = previewCanvas.getContext('2d');
-  let nextType = null;
+  function drawNextPiece() {
+      nextCtx.clearRect(0, 0, nextCanvas.width, nextCanvas.height);
+      if (!nextPieceMatrix) return;
+      const matrix = nextPieceMatrix;
+      const color = colors[matrix.flat().find(v => v > 0)];
+      const scale = 24;
+      const w = matrix[0].length * scale;
+      const h = matrix.length * scale;
+      const x_off = (nextCanvas.width - w) / 2;
+      const y_off = (nextCanvas.height - h) / 2;
 
-  function drawPreview() {
-      previewCtx.clearRect(0, 0, previewCanvas.width, previewCanvas.height);
-      if (!nextType) return;
-      const matrix = createPiece(nextType);
-      // Center the piece
-      const blockSize = 18;
-      const w = matrix[0].length * blockSize;
-      const h = matrix.length * blockSize;
-      const ox = ((previewCanvas.width - w) / 2) | 0;
-      const oy = ((previewCanvas.height - h) / 2) | 0;
       matrix.forEach((row, y) => {
           row.forEach((v, x) => {
-              if (v) {
-                  // glossy fill
-                  const g = previewCtx.createLinearGradient(ox+x*blockSize, oy+y*blockSize, ox+x*blockSize+blockSize, oy+y*blockSize+blockSize);
-                  g.addColorStop(0.0, adjustColor(colors[v], 60));
-                  g.addColorStop(0.55, colors[v]);
-                  g.addColorStop(1.0, adjustColor(colors[v], -40));
-                  previewCtx.fillStyle = g;
-                  previewCtx.fillRect(ox+x*blockSize, oy+y*blockSize, blockSize, blockSize);
-                  // bevel
-                  previewCtx.beginPath();
-                  previewCtx.moveTo(ox+x*blockSize+0.5, oy+y*blockSize+blockSize-0.5);
-                  previewCtx.lineTo(ox+x*blockSize+0.5, oy+y*blockSize+0.5);
-                  previewCtx.lineTo(ox+x*blockSize+blockSize-0.5, oy+y*blockSize+0.5);
-                  previewCtx.strokeStyle = 'rgba(255,255,255,0.18)';
-                  previewCtx.stroke();
-                  previewCtx.beginPath();
-                  previewCtx.moveTo(ox+x*blockSize+blockSize-0.5, oy+y*blockSize+0.5);
-                  previewCtx.lineTo(ox+x*blockSize+blockSize-0.5, oy+y*blockSize+blockSize-0.5);
-                  previewCtx.lineTo(ox+x*blockSize+0.5, oy+y*blockSize+blockSize-0.5);
-                  previewCtx.strokeStyle = 'rgba(0,0,0,0.35)';
-                  previewCtx.stroke();
+              if (v !== 0) {
+                  drawBlock.call({ ctx: nextCtx }, x_off + x * scale, y_off + y * scale, color);
               }
           });
       });
   }
 
-  // --- Block trail ---
-  const TRAIL_LENGTH = 12;
-  let pieceTrail = [];
-
-  function updateTrail() {
-      if (flashingRows.length) return;
-      // Record center of piece
-      const cx = (player.pos.x + player.matrix[0].length / 2) * 24;
-      const cy = (player.pos.y + player.matrix.length / 2) * 24;
-      pieceTrail.push({ x: cx, y: cy });
-      if (pieceTrail.length > TRAIL_LENGTH) pieceTrail.shift();
-  }
-
-  function drawTrail() {
-      if (pieceTrail.length < 2) return;
-      ctx.save();
-      ctx.globalAlpha = 0.22;
-      ctx.strokeStyle = '#fff';
-      ctx.lineWidth = 10;
-      ctx.beginPath();
-      for (let i = 0; i < pieceTrail.length; i++) {
-          const p = pieceTrail[i];
-          if (i === 0) ctx.moveTo(p.x, p.y);
-          else ctx.lineTo(p.x, p.y);
-      }
-      ctx.stroke();
-      ctx.globalAlpha = 0.12;
-      ctx.lineWidth = 22;
-      ctx.beginPath();
-      for (let i = 0; i < pieceTrail.length; i++) {
-          const p = pieceTrail[i];
-          if (i === 0) ctx.moveTo(p.x, p.y);
-          else ctx.lineTo(p.x, p.y);
-      }
-      ctx.stroke();
-      ctx.restore();
-  }
-
-  // --- Landing particles ---
-  function emitLandingParticles(matrix, pos) {
-      for (let y = 0; y < matrix.length; y++) {
-          for (let x = 0; x < matrix[y].length; x++) {
-              const v = matrix[y][x];
-              if (!v) continue;
-              const cx = (pos.x + x) * 24 + 12;
-              const cy = (pos.y + y) * 24 + 12;
-              for (let k = 0; k < 3; k++) {
-                  const ang = Math.random() * Math.PI * 2;
-                  const spd = 1.2 + Math.random() * 2.2;
-                  particles.push({
-                      x: cx, y: cy,
-                      vx: Math.cos(ang) * spd,
-                      vy: Math.sin(ang) * spd - (0.5 + Math.random()*0.6),
-                      life: 320 + Math.random()*120,
-                      age: 0,
-                      color: colors[v],
-                      size: 2 + Math.random()*2.5,
-                  });
-              }
-          }
-      }
-  }
-
-  // --- Modify playerReset to use nextType and set nextType for preview ---
   function playerReset() {
       const pieces = 'TJLOSZI';
-      // Use nextType if available, else random
-      const type = nextType || pieces[(pieces.length * Math.random()) | 0];
-      player.matrix = createPiece(type);
+      if (!nextPieceMatrix) {
+          nextPieceMatrix = createPiece(pieces[(pieces.length * Math.random()) | 0]);
+      }
+      player.matrix = nextPieceMatrix;
+      nextPieceMatrix = createPiece(pieces[(pieces.length * Math.random()) | 0]);
+      drawNextPiece();
+
       player.pos.y = 0;
       player.pos.x = ((COLS / 2) | 0) - ((player.matrix[0].length / 2) | 0);
+      // start spawn pop animation
       pieceSpawnT = PIECE_SPAWN_MS;
-      pieceTrail = []; // reset trail
-      // Set nextType for preview
-      nextType = pieces[(pieces.length * Math.random()) | 0];
-      drawPreview();
       if (collide(arena, player)) {
           arena.forEach(row => row.fill(0));
           player.score = 0;
@@ -594,13 +547,29 @@
       }
   }
 
-  // --- Emit landing particles in playerDrop and hardDrop ---
+  function playerMove(dir) {
+      player.pos.x += dir;
+      if (collide(arena, player)) player.pos.x -= dir;
+  }
+
+  function getFullRows() {
+      const rows = [];
+      for (let y = 0; y < arena.length; ++y) {
+          let full = true;
+          for (let x = 0; x < arena[y].length; ++x) {
+              if (arena[y][x] === 0) { full = false; break; }
+          }
+          if (full) rows.push(y);
+      }
+      return rows;
+  }
+
   function playerDrop() {
       player.pos.y++;
       if (collide(arena, player)) {
           player.pos.y--;
           merge(arena, player);
-          emitLandingParticles(player.matrix, player.pos); // <--- emit particles
+          emitLandingParticles(player);
           const rows = getFullRows();
           if (rows.length) {
               // Snapshot colors for particles before we start flashing
@@ -621,7 +590,7 @@
       } while (!collide(arena, player));
       player.pos.y--;
       merge(arena, player);
-      emitLandingParticles(player.matrix, player.pos); // <--- emit particles
+      emitLandingParticles(player);
       arenaSweep();
       playerReset();
       dropCounter = 0;
@@ -697,6 +666,14 @@
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       drawBackground();
 
+      // Trail
+      for (const t of trail) {
+          const a = 1 - (t.age / TRAIL_MAX_AGE);
+          ctx.globalAlpha = a * 0.25;
+          drawMatrix(t.matrix, t.pos, 'solid');
+          ctx.globalAlpha = 1;
+      }
+
       // Arena
       drawMatrix(arena, { x: 0, y: 0 }, 'solid');
 
@@ -707,7 +684,6 @@
 
           // Drop shadow then the piece with a tiny spawn pop
           drawMatrix(player.matrix, player.pos, 'shadow');
-          drawTrail(); // <--- draw trail
           ctx.save();
           // spawn pop scale
           const t = Math.max(0, Math.min(1, 1 - (pieceSpawnT / PIECE_SPAWN_MS)));
@@ -758,6 +734,19 @@
       lastTime = time;
 
       if (!paused) {
+          // Update trail
+          for (let i = trail.length - 1; i >= 0; i--) {
+              trail[i].age += delta;
+              if (trail[i].age > TRAIL_MAX_AGE) trail.splice(i, 1);
+          }
+          if (!flashingRows.length) {
+              trail.push({
+                  matrix: player.matrix,
+                  pos: { ...player.pos },
+                  age: 0
+              });
+          }
+
           if (flashingRows.length) {
               // Run flash animation; defer clearing until done
               flashElapsed += delta;
@@ -773,7 +762,6 @@
               dropCounter += delta;
               const speed = Math.max(120, 1000 - player.level * 75);
               if (dropCounter > speed) playerDrop();
-              updateTrail(); // <--- update trail
           }
           // Visual timers
           if (pieceSpawnT > 0) pieceSpawnT -= delta;
@@ -847,10 +835,6 @@
           }, { passive: true });
       });
   })();
-
-  // --- Initialize preview and nextType ---
-  nextType = 'TJLOSZI'[(Math.random() * 7) | 0];
-  drawPreview();
 
   playerReset();
   updateScore();
