Fix Tetris launch URL to be lowercase

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ Terminal Protcol Initiated [Website Version: 0.2]
 
         if (normalized === '16zetatetris' || normalized === 'tetris') {
             printLine('Launching Tetris...');
-            launchWithToken('Tetris.html');
+            launchWithToken('tetris.html');
             return;
         }
 
