Fix Tetris HTML file name in launch functions

--- a/index.html
+++ b/index.html
@@ -668,8 +668,8 @@ Terminal Protcol Initiated [Website Version: 0.2]
 
         if (normalized === '16zetatetris' || normalized === 'tetris') {
             printLine('Launching Tetris...');
-            addDynamicGame('Tetris', 'Tetris.html');
-            launchWithToken('Tetris.html');
+            addDynamicGame('Tetris', 'tetris.html');
+            launchWithToken('tetris.html');
             return;
         }
 
